--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-container {
   display: flex;
-  height: 100vh;
-  background: #f0f2f5;
+  height: 100dvh;
+  width: 100vw;
   overflow: hidden;
 }
